GNOME Bugzilla – Bug 675317
Hotspot should not be available on hardware that lacks support
Last modified: 2013-02-14 09:02:41 UTC
While trying to configure the hotspot feature on fedora 17, I discovered that it cannot be configured. There is a "options" button, but it doesn't take it in account any modification there ( even after restarting ). It update the file /etc/sysconfig/network-scripts/ifcfg-Hotspot but the sharing is in adhoc mode, and for some reason, i cannot see it from my phone. Setting oit to infrastructure should do the trick, but this is not taken in account. Step to reproduce - plug a ethernet cable - open networ preference, from the nm-applet gnome-shell menu - click on wireless, click on "use as hotspot" - click on options, try to change various thing, and use "save". Expected results : - options are applied on the connection Observed results : - nothing change
I just filed #692869. Check with "iw list" that your system actually has Ad-Hoc support. NetworkManager does not configure managed-mode hotspots and it doesn't seem to warn the user if Ad-Hoc is not available, it just pretends that it started the hotspot regardless.
NM doesn't seem to export whether Ad-Hoc networking is available. My brcmsmac driver doesn't seem to support Ad-Hoc either, so I can test this.
Created attachment 235725 [details] [review] network: disable the Hotspot button if the device does not support it If the wireless device doesn't support either of the two possible hotspot modes, disable the button. Also, add a tooltip to the button when it's disabled, explaining why ("device does not support" or "system policy prohibits"). ==== This depends on the most recent NetworkManager master or nm-0-9-8 branch. We could also throw in an #ifdef if you wanted to not require that.
Review of attachment 235725 [details] [review]: Looks fine to me as-is, if we ever get an NM release that matches up with GNOME requirements...
On a related note, it looks like NM shows ad-hoc hotspots in the list of available connections, too, regardless of whether ad-hoc is supported. Trying to connect ad-hoc fails without an explanation that the hardware doesn't support that type of connection. This is on NetworkManager-0.9.7.0-12.git20121004.fc18.x86_64 and 02:00.0 Network controller: Broadcom Corporation BCM4313 802.11b/g/n Wireless LAN Controller (rev 01)
(In reply to comment #5) > On a related note, it looks like NM shows ad-hoc hotspots in the list of > available connections, too, regardless of whether ad-hoc is supported. Trying > to connect ad-hoc fails without an explanation that the hardware doesn't > support that type of connection. This is on I can't see Ad-Hoc networks listed without ad-hoc support.
Attachment 235725 [details] pushed as 6b48994 - network: disable the Hotspot button if the device does not support it