network: disable the Hotspot button if the device does not support it

If the wireless device doesn't support either of the two possible
hotspot modes, disable the button. Also, add a tooltip to the button
when it's disabled, explaining why ("device does not support" or
"system policy prohibits").

https://bugzilla.gnome.org/show_bug.cgi?id=675317